# lockermatch

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .gitignore  Cargo.toml  create_env_template.sh  log4rs.yaml  rustfmt.toml
backend/docs/: redis_authentication.md
backend/examples/: redis_all.rs  redis_counter.rs  redis_hash.rs  redis_user.rs
backend/src/: lib.rs  main.rs  router.rs
backend/src/http/: error.rs  mod.rs  status.rs
backend/src/redis/: examples.rs  mod.rs
backend/src/routes/: health_check.rs
backend/src/student/: create.rs  mod.rs
